# aethis-cli

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  claude-code-review.yml  publish.yml
aethis_cli/: __init__.py  __main__.py  _version.py  auth.py  auth_helpers.py  auth_providers.py  client.py  config.py  errors.py  main.py  output.py  render.py  update_check.py
aethis_cli/commands/: _id_utils.py  account_cmd.py  bundles_cmd.py  decide_cmd.py  domain_guidance_cmd.py  explain_cmd.py  fields_cmd.py  generate_cmd.py  guidance_cmd.py  iam_cmd.py  init_cmd.py  login_cmd.py  mcp_cmd.py  profile_cmd.py  projects_cmd.py  publish_cmd.py  refine_cmd.py  rulebooks_cmd.py  rulesets_cmd.py  source_cmd.py  status_cmd.py  test_cmd.py  update_cmd.py  whoami_cmd.py
docs/: iam-command-reference.md  iam-developer-guide.md
examples/: demo_core.sh
examples/community-grants-rulebook/: README.md  aethis.yaml
examples/community-grants-rulebook/fields/: fields.yaml
examples/community-grants-rulebook/guidance/: hints.yaml
examples/community-grants-rulebook/rulesets/senior-wellbeing-grant/: aethis.yaml
examples/community-grants-rulebook/rulesets/senior-wellbeing-grant/fields/: fields.yaml
examples/community-grants-rulebook/rulesets/senior-wellbeing-grant/guidance/: hints.yaml
examples/community-grants-rulebook/rulesets/senior-wellbeing-grant/sources/: policy.md
examples/community-grants-rulebook/rulesets/youth-activity-grant/: aethis.yaml
examples/community-grants-rulebook/rulesets/youth-activity-grant/fields/: fields.yaml
examples/community-grants-rulebook/rulesets/youth-activity-grant/guidance/: hints.yaml
examples/community-grants-rulebook/rulesets/youth-activity-grant/sources/: policy.md
examples/community-grants-rulebook/rulesets/youth-activity-grant/tests/: scenarios.yaml
examples/community-grants-rulebook/tests/: scenarios.yaml
examples/spacecraft-crew-rules/: README.md  aethis.yaml
examples/spacecraft-crew-rules/guidance/: hints.yaml
examples/spacecraft-crew-rules/sources/: spacecraft-crew-certification-act.md
examples/spacecraft-crew-rules/tests/: scenarios.yaml
tests/: conftest.py  test_account_cmd.py  test_auth.py  test_auth_providers.py  test_client.py  test_config.py  test_decide_cmd.py  test_empty_input_guards.py  test_explain_cmd.py  test_fields_cmd.py  test_generate_fields.py  test_guidance_cli.py  test_iam_cmd.py  test_id_utils.py  test_init.py  test_lazy_auth.py  test_login_headless.py  test_main.py  test_mcp_cmd.py  test_profiles.py  test_publish_force.py  test_publish_rulebook_flags.py  test_render.py  test_rulebooks_cmd.py  test_rulesets_b1b_lifecycle.py  test_status_cmd.py  test_update_check.py  test_update_cmd.py  test_whoami_cmd.py
tests/e2e/: test_english_language_e2e.py  test_rulebook_hierarchy_e2e.py  test_spacecraft_e2e.py
