[project]
name = "aethis-cli"
version = "0.1.0"
description = "CLI for the Aethis developer API — author, test, and publish rule bundles"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
aethis = "aethis_cli.main:app"

[project.optional-dependencies]
keyring = ["keyring>=25.0.0"]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "manual: requires real Aethis API (AETHIS_API_KEY + AETHIS_BASE_URL)",
]
addopts = "-m 'not manual'"

[tool.ruff]
target-version = "py311"
line-length = 120
