[project]
name = "aethis-cli"
dynamic = ["version"]
description = "CLI for the Aethis developer API — author, test, and publish rule bundles"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Aethis", email = "eng@aethis.ai"}]
keywords = ["cli", "eligibility", "rules-engine", "compliance", "aethis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://aethis.ai"
Repository = "https://github.com/Aethis-ai/aethis-cli"
Documentation = "https://github.com/Aethis-ai/aethis-cli#readme"
"Bug Tracker" = "https://github.com/Aethis-ai/aethis-cli/issues"

[project.scripts]
aethis = "aethis_cli.main:app"

[project.optional-dependencies]
keyring = ["keyring>=25.0.0"]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "aethis_cli/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "manual: requires real Aethis API (AETHIS_API_KEY + AETHIS_BASE_URL)",
]
addopts = "-m 'not manual' --cov=aethis_cli --cov-fail-under=45"

[tool.ruff]
target-version = "py311"
line-length = 120
