[project]
name = "aethis-cli"
version = "0.6.0"
description = "CLI for the Aethis developer API — author, test, and publish rule bundles"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Aethis", email = "eng@aethis.ai"}]
keywords = ["cli", "eligibility", "rules-engine", "compliance", "aethis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://aethis.ai"
Repository = "https://github.com/Aethis-ai/aethis-cli"
Documentation = "https://github.com/Aethis-ai/aethis-cli#readme"
"Bug Tracker" = "https://github.com/Aethis-ai/aethis-cli/issues"

[project.scripts]
aethis = "aethis_cli.main:cli"

[project.optional-dependencies]
keyring = ["keyring>=25.0.0"]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "manual: requires real Aethis API (AETHIS_API_KEY + AETHIS_BASE_URL)",
]
addopts = "-m 'not manual' --cov=aethis_cli --cov-fail-under=45"

[tool.ruff]
target-version = "py311"
line-length = 120
